@@ -118,7 +118,7 @@
                     </annotationProcessorPaths>
                     <compilerArgs>
                         <arg>--add-modules</arg>
-                        <arg>jdk.compiler,jdk.net</arg>
+                        <arg>jdk.compiler</arg>
                         <arg>-XDcompilePolicy=simple</arg>
                         <arg>--should-stop=ifError=FLOW</arg>
                         <arg>
@@ -142,7 +142,6 @@
                         </exclude>
                     </excludes>
                     <jvmArguments>
-                        --add-modules jdk.net 
                         -Duser.timezone=UTC
                     </jvmArguments>
                 </configuration>
@@ -154,7 +153,6 @@
                 <configuration>
                     <argLine>
                         @{argLine}
-                        --add-modules jdk.net
                         -Duser.timezone=UTC
                     </argLine>
                 </configuration>
